Initial file commit

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 !/.gitignore
 !/.LICENCE
 !/.README.md
-!/Assets
-/Assets/*
-!/Assets/Varneon
-/Assets/Varneon/*
-!/Assets/Varneon/SubfolderNameHere
+!/Packages
+/Packages/*
+!/Packages/com.varneon.udon-array-extensions
+/Packages/com.vrchat.core.vpm-resolver/*
