--- a/Packages/com.varneon.vudon.array-extensions/Runtime/Varneon.VUdon.ArrayExtensions.Runtime.asmdef
+++ b/Packages/com.varneon.vudon.array-extensions/Runtime/Varneon.VUdon.ArrayExtensions.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Varneon.VUdon.ArrayExtensions",
+    "name": "Varneon.VUdon.ArrayExtensions.Runtime",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
