--- a/Packages/com.varneon.vudon.array-extensions/package.json
+++ b/Packages/com.varneon.vudon.array-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.varneon.vudon.array-extensions",
-  "version": "0.3.0",
+  "version": "0.3.0-beta.1",
   "displayName": "VUdon - Array Extensions",
   "description": "Collection of array extension methods compatible with UdonSharp 1.x which adds partial feature set from List<T>",
   "unity": "2019.4",
