Migrate UdonSharp dependency to Worlds SDK 3.4.0+
Closes #16

--- a/Packages/com.varneon.vudon.array-extensions/package.json
+++ b/Packages/com.varneon.vudon.array-extensions/package.json
@@ -10,6 +10,6 @@
     "url": "https://github.com/Varneon"
   },
   "vpmDependencies": {
-    "com.vrchat.udonsharp": "1.x.x"
+    "com.vrchat.worlds": ">=3.4.0 <4.0.0"
   }
 }
